Create addapt UI for user logout
Changed the Header component to receive a prop that tell is to include a
logout button, and fixed a bug in AuthReducer that made Local Storage
not delete on logout.

--- a/frontend-web/src/assets/css/theme.css
+++ b/frontend-web/src/assets/css/theme.css
@@ -60,3 +60,11 @@ button {
 button:hover {
   background-color: var(--theme-color-pale-orange);
 }
+
+.redButton {
+  background-color: darkred;
+}
+
+.redButton:hover {
+  background-color: var(--theme-color-dark-red);
+}
