--- a/frontend-web/src/assets/css/Forms.css
+++ b/frontend-web/src/assets/css/Forms.css
@@ -1,6 +1,7 @@
 label {
   display: block;
   margin-bottom: 0.25rem;
+  margin-top: 0.5rem;
 }
 
 input {
@@ -8,7 +9,7 @@ input {
   min-width: 250px;
   max-width: 350px;
   font-family: var(--font-family-general);
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .UserForm {
@@ -27,4 +28,15 @@ input {
 
 .UserForm > h2 {
   margin: 1rem;
+}
+
+.UserForm > button {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.FormAlert {
+  font-size: 0.65rem;
+  color: grey;
+  font-style: italic;
 }
