Create components for friends functionality
This commit makes the following changes to the application in order to
allow all friend functionality:

Changes to utility files
- Update the api-service file to include necessary API calls
- Abstract the translation of API responses in a new functions file

New pages and components
- Created LogInView as the main page for authenticated users
- Created Friends page, which is rendered within the LoggedInView
- Added the functionality to maintain a state for the selected friend,
to be used in the core functionality later on

--- a/frontend-web/src/assets/css/Forms.css
+++ b/frontend-web/src/assets/css/Forms.css
@@ -40,3 +40,39 @@ input {
   color: grey;
   font-style: italic;
 }
+
+/* Styling for the searchbar and results */
+
+.UserSearchBar {
+  width: auto;
+  min-height: 1.5rem;
+  margin: 0.25rem auto;
+  padding: 0 0.25rem;
+  border-color: var(--theme-color-dark-red);
+  border-radius: 0.5rem;
+  font-size: 0.75rem;
+}
+
+.UserSearchBar:focus {
+  outline: none;
+}
+
+.SearchResultList {
+  padding: 0.25rem 0rem;
+  margin: 0;
+  font-size: 0.75rem;
+  padding: 0rem;
+  background-color: transparent;
+  border-bottom: solid white;
+}
+
+.SearchResultList > li {
+  padding: 0.25rem 0.75rem;
+  text-align: center;
+  list-style: none;
+  cursor: pointer;
+}
+
+.SearchResultList > li:hover {
+  background-color: var(--theme-color-light-orange);
+}
