feature: create the frontend to make food choices
Creates all the required components for the frontend of the food choice
feaute, including:

- Update the boilerplate FoodOptions component to include views to make
and delete choices, as well as to see matches
- Refactor the FriendList to allow navigation to the new FoodOptions
components
- Refactor the LoggedInView to hold the state of the FriendList and pass
the information to both the Friends and FoodOptions components, to handle
cases where a user navigates to someone not in their FriendList
- Create the API calls within the api-service module
- Create actions for liking and unliking in the action_types module, to
reduce risk of misspelling
- Create the required stylesheets
- Update the router to include the new components as children of the
loggedin view

--- a/frontend-web/src/assets/css/Icons.css
+++ b/frontend-web/src/assets/css/Icons.css
@@ -14,3 +14,23 @@ svg {
 li > .fa-rectangle-xmark {
   margin-left: auto;
 }
+
+.fa-circle-xmark {
+  color: darkred;
+  font-size: 2rem;
+  margin:auto;
+}
+
+.fa-circle-xmark:hover {
+  color: var(--theme-color-dark-red);
+}
+
+.fa-circle-check {
+  color: darkgreen;
+  font-size: 2rem;
+  margin:auto;
+}
+
+.fa-circle-check:hover {
+  color: green;
+}
